[gd_scene load_steps=9 format=3 uid="uid://cdf5jhrchts03"]

[ext_resource type="Script" uid="uid://dv28g76wg1uot" path="res://StartScene.gd" id="1_8qpgq"]
[ext_resource type="AudioStream" uid="uid://bnb6kf01pcml4" path="res://gamestart-272829.wav" id="1_ws5ob"]
[ext_resource type="AudioStream" uid="uid://ddietequfurbf" path="res://win-sound-68509.wav" id="2_bqqt8"]
[ext_resource type="AudioStream" uid="uid://c36t77jdgqaxh" path="res://game-over-160612.wav" id="3_8qpgq"]
[ext_resource type="Script" uid="uid://dfbvkurnj3ra" path="res://MainGame.gd" id="3_pv6b4"]
[ext_resource type="Texture2D" uid="uid://d26mfnyhylmfd" path="res://background.jpg" id="4_pv6b4"]

[sub_resource type="ViewportTexture" id="ViewportTexture_pv6b4"]

[sub_resource type="FontVariation" id="FontVariation_8qpgq"]

[node name="StartScene" type="Node2D"]
script = ExtResource("1_8qpgq")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(542, 321)
scale = Vector2(1.18571, 0.733673)
texture = ExtResource("4_pv6b4")
flip_h = true
flip_v = true

[node name="StartButton" type="Button" parent="."]
offset_left = 212.0
offset_top = 132.0
offset_right = 866.0
offset_bottom = 182.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "What color do you get when you mix these?\""
icon = SubResource("ViewportTexture_pv6b4")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 391.0
offset_top = 73.0
offset_right = 640.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "‚Äúüé® GAME START‚Äù"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_ws5ob")

[node name="MainGame" type="Node2D" parent="."]
script = ExtResource("3_pv6b4")

[node name="Timer" type="Timer" parent="MainGame"]

[node name="LevelLabel" type="Label" parent="MainGame"]
offset_left = 167.0
offset_top = 458.0
offset_right = 317.0
offset_bottom = 492.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Level: 1/5"

[node name="ScoreLabel" type="Label" parent="MainGame"]
offset_left = 178.0
offset_top = 358.0
offset_right = 328.0
offset_bottom = 392.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="TimerLabel" type="Label" parent="MainGame"]
offset_left = 187.0
offset_top = 397.0
offset_right = 337.0
offset_bottom = 431.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Time: 15"

[node name="Button1" type="Button" parent="MainGame"]
offset_left = 711.0
offset_top = 235.0
offset_right = 791.0
offset_bottom = 271.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Orange"

[node name="Button2" type="Button" parent="MainGame"]
offset_left = 714.0
offset_top = 333.0
offset_right = 781.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Green"

[node name="Button3" type="Button" parent="MainGame"]
offset_left = 714.0
offset_top = 430.0
offset_right = 781.0
offset_bottom = 466.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Purple"

[node name="CorrectColorRect" type="ColorRect" parent="MainGame"]
visible = false
offset_left = 621.0
offset_top = 225.0
offset_right = 682.0
offset_bottom = 276.0
color = Color(1, 0.647059, 0, 1)

[node name="CorrectColorLabel" type="Label" parent="MainGame"]
visible = false
offset_left = 621.0
offset_top = 276.0
offset_right = 682.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Orange"
horizontal_alignment = 1

[node name="QuestionLabel" type="Label" parent="MainGame"]
offset_left = 256.0
offset_top = 199.0
offset_right = 788.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Level 1: What color do you get when you mix Red and Yellow?"

[node name="ResultLabel" type="Label" parent="MainGame"]
offset_left = 325.0
offset_top = 426.0
offset_right = 732.0
offset_bottom = 493.0
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_8qpgq")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinSound" type="AudioStreamPlayer" parent="MainGame"]
stream = ExtResource("2_bqqt8")

[node name="LoseSound" type="AudioStreamPlayer" parent="MainGame"]
stream = ExtResource("3_8qpgq")

[node name="Color1" type="ColorRect" parent="MainGame"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 364.0
offset_top = 239.0
offset_right = 418.0
offset_bottom = 297.0
grow_horizontal = 2
pivot_offset = Vector2(88, 50)
size_flags_horizontal = 2
color = Color(1, 0, 0, 1)

[node name="RedLabel" type="Label" parent="MainGame/Color1"]
layout_mode = 1
offset_left = 3.0
offset_top = 81.0
offset_right = 49.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Red"

[node name="Color2" type="ColorRect" parent="MainGame"]
offset_left = 223.0
offset_top = 238.0
offset_right = 279.0
offset_bottom = 295.0
pivot_offset = Vector2(67, 27)
color = Color(1, 1, 0, 1)

[node name="YellowLabel" type="Label" parent="MainGame/Color2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.543
anchor_top = -1.052
anchor_right = -3.543
anchor_bottom = -1.052
offset_left = 193.408
offset_top = 137.964
offset_right = 260.408
offset_bottom = 186.964
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Yellow"

[node name="Color3" type="ColorRect" parent="MainGame"]
visible = false
offset_left = 82.0
offset_top = 238.0
offset_right = 138.0
offset_bottom = 295.0
pivot_offset = Vector2(67, 27)
color = Color(0, 0, 1, 1)

[node name="BlueLabel" type="Label" parent="MainGame/Color3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.543
anchor_top = -1.052
anchor_right = -3.543
anchor_bottom = -1.052
offset_left = 52.408
offset_top = 137.964
offset_right = 119.408
offset_bottom = 186.964
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Blue"

[node name="PlusLabel" type="Label" parent="MainGame"]
offset_left = 312.0
offset_top = 240.0
offset_right = 352.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "+"

[node name="PlusLabel2" type="Label" parent="MainGame"]
visible = false
offset_left = 192.0
offset_top = 240.0
offset_right = 232.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "+"

[node name="EqualsLabel" type="Label" parent="MainGame"]
offset_left = 515.0
offset_top = 253.0
offset_right = 555.0
offset_bottom = 303.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "="

[node name="RestartButton" type="Button" parent="MainGame"]
visible = false
offset_left = 400.0
offset_top = 500.0
offset_right = 600.0
offset_bottom = 540.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Play Again"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainGame/RestartButton" to="MainGame" method="_on_restart_button_pressed"]
